infrastructure/k8s/central-lib.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cn-lib
  labels:
    app: cn-lib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cn-lib
  template:
    metadata:
      labels:
        app: cn-lib
    spec:
      containers:
        - name: cn-lib
          image: darkovrbaski/central-library:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "300Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        - name: cndb
          image: postgres:alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: cn-postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cn-lib-service
  labels:
    app: cn-lib
spec:
  type: ClusterIP
  selector:
    app: cn-lib
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 8080
