infrastructure/k8s/ni-lib.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ni-lib
  labels:
    app: ni-lib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ni-lib
  template:
    metadata:
      labels:
        app: ni-lib
    spec:
      containers:
      - name: ni-lib
        image: darkovrbaski/branch-library:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 300Mi
            cpu: 150m
          limits:
            memory: 512Mi
            cpu: 500m
      - name: nsdb
        image: postgres:alpine
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: ./ni-postgres-data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: ni-lib-service
  labels:
    app: ni-lib
spec:
  selector:
    app: ni-lib
  ports:
  - name: http
    port: 9030
    targetPort: 8080
