infrastructure/k8s/ns-lib.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-lib
  labels:
    app: ns-lib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ns-lib
  template:
    metadata:
      labels:
        app: ns-lib
    spec:
      containers:
        - name: ns-lib
          image: darkovrbaski/branch-library:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"

        - name: nsdb
          image: postgres:alpine
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: ns-postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: ns-lib-service
  labels:
    app: ns-lib
spec:
  selector:
    app: ns-lib
  ports:
    - name: http
      port: 9010
      targetPort: 8080
