infrastructure/k8s/ingress-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /cn(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cn-lib-service
                port:
                  number: 9000

          - path: "/()(.*)"
            pathType: Prefix
            backend:
              service:
                name: ns-lib-service
                port:
                  number: 9010

          - path: /bg(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bg-lib-service
                port:
                  number: 9020

          - path: /ni(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ni-lib-service
                port:
                  number: 9030
